# GAMES101

./: .gitignore  CMakeLists.txt  README.md  buildall.sh
Assignment1/: README.md  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/: CMakeLists.txt  README.md  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  OBJ_Loader.h  README.md  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/: CMakeLists.txt  README.md  main.cpp
Assignment5/: CMakeLists.txt  Light.hpp  Object.hpp  README.md  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp
Assignment6/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  README.md  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Assignment7/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  README.md  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Assignment7/sample/: binary_512.ppm  microfacet_512.ppm  microfacet_importance_sample_512.ppm
